--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <div class="media-body">
                                 <blockquote class="blockquote">
                                     <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
-                                    <p>- Jane Doe</p>
+                                    <p>- Kiriaki</p>
                                 </blockquote>
                             </div>
                         </div>
@@ -105,7 +105,7 @@
                             <div class="media-body">
                                 <blockquote class="blockquote">
                                     <p>I haven't been sober for months!</p>
-                                    <p>- Jane Doe</p>
+                                    <p>- Stefanos</p>
                                 </blockquote>
                             </div>
                         </div>
